# atleta

./: .gitignore  .gitmodules  .shellcheckrc  Cargo.toml  Changelog  Changelog.md  Dockerfile  README.md  rust-toolchain.toml
.github/workflows/: Changelog.yml  build-docker-image.yml  build-release-devnet.yml  build-release-mainnet.yml  build-release-testnet.yml  changelog.yml  check.yml  ci.yml  deploy-devnet.yml  deploy-explorer.yml  deploy-testnet.yml  release-binaries.yml  release-devnet-chainspec.yml  release-runtime.yml  release-testnet-chainspec.yml  revert-testnet.yml
blockscout/: docker-compose.yml
blockscout/envs/: common-blockscout.env
chainspecs/: README.md  chain-spec.devnet.json  chain-spec.testnet.json
deploy/: add-session-keys.sh  docker-compose.devnet.yml  docker-compose.testnet.yml  run-testnet.sh
deploy/devnet/: docker-compose.yml
deploy/testnet/: README.md  docker-compose.yml  index.js  nginx.conf  package-lock.json  package.json  revert.sh  run-bootnode.sh  run-technical-validators.sh  run-validator.sh  set_session_keys.js  validate.js  validate.sh
deploy/utils/backup_script/: run_backup.sh  test_gcp.sh
deploy/utils/server-prep/: _remote-setup.sh  setup-server.sh
devops/: docker-compose.devnet.yml
node/: Cargo.toml
node/src/: benchmarking.rs  chain_spec.rs  cli.rs  client.rs  command.rs  error.rs  eth.rs  grandpa_support.rs  main.rs  relay_chain_selection.rs  service.rs  workers.rs
node/src/cli/: validator.rs
node/src/parachains_db/: mod.rs  upgrade.rs
node/src/rpc/: consensus_data_provider.rs  eth.rs  mod.rs
pallets/democracy-patched/: Cargo.toml
pallets/democracy-patched/src/: benchmarking.rs  conviction.rs  lib.rs  tests.rs  types.rs  vote.rs  vote_threshold.rs
pallets/democracy-patched/src/migrations/: unlock_and_unreserve_all_funds.rs  v1.rs
pallets/democracy-patched/src/tests/: cancellation.rs  decoders.rs  delegation.rs  external_proposing.rs  fast_tracking.rs  lock_voting.rs  metadata.rs  public_proposals.rs  scheduling.rs  voting.rs
pallets/faucet/: Cargo.toml  README.md
pallets/faucet/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/metamask/: Cargo.toml  README.md
pallets/metamask/src/: eip712.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/staking-bcs/: Cargo.toml
pallets/staking-bcs/src/: lib.rs
precompiles/babe/: Cargo.toml
precompiles/babe/src/: lib.rs
precompiles/dumb/: Cargo.toml
precompiles/dumb/src/: lib.rs
precompiles/faucet/: Cargo.toml
precompiles/faucet/src/: lib.rs
precompiles/governance/: Cargo.toml
precompiles/governance/src/: lib.rs
precompiles/nomination-pools/: Cargo.toml
precompiles/nomination-pools/src/: lib.rs
precompiles/preimage/: Cargo.toml
precompiles/preimage/src/: lib.rs
precompiles/staking/: Cargo.toml
precompiles/staking/src/: lib.rs  solidity_types.rs
precompiles/treasury/: Cargo.toml
precompiles/treasury/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: constants.rs  lib.rs  precompiles.rs  utils.rs  xcm_config.rs
runtime/src/configs/: assets_config.rs  contracts_config.rs
runtime/src/weights/: mod.rs  pallet_xcm.rs  runtime_common_paras_registrar.rs  runtime_common_slots.rs  runtime_parachains_assigner_on_demand.rs  runtime_parachains_configuration.rs  runtime_parachains_disputes.rs  runtime_parachains_hrmp.rs  runtime_parachains_inclusion.rs  runtime_parachains_initializer.rs  runtime_parachains_paras.rs  runtime_parachains_paras_inherent.rs
scripts/: alice  bob  devnet  generate_keys.py  localnet  package-lock.json  run_locally.sh  run_testnet.sh  run_validator_node.sh
scripts/js/: package.json  prefund.js
utils/: package.json
